# cairo-timer

./: Cairo-Timer-1.0.deb  Cairo-Timer-1.1.deb  README.md  meson.build  timer  timer.desktop  timer.vala
bin.old/: timer  timer.vala
data/: com.github.eexpress.cairo-timer.appdata.xml  com.github.eexpress.cairo-timer.desktop  meson.build
debian/: changelog  control  copyright
debian/usr/share/metainfo/: com.github.eexpress.cairo-timer.appdata.xml
src/: Application.vala
